--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,7 +38,7 @@
 <div class="language-switcher">
   <ul>
     <li>
-      <a href="{{ '/en/' | relative_url }}" {% if page.lang == 'en' %}class="active"{% endif %}>EN</a>
+      <a href="{{ '/' | relative_url }}" {% if page.lang == 'en' %}class="active"{% endif %}>EN</a>
     </li>
     <li>
       <a href="{{ '/it/' | relative_url }}" {% if page.lang == 'it' %}class="active"{% endif %}>IT</a>
