--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <!-- navigation -->
 <div class="nav">
   <div>
-    <img src="{{ '/assets/logo.webp' | relative_url }}" alt="lively wallpaper logo" />
+    <img src="{{ '/assets/images/logo.webp' | relative_url }}" alt="lively wallpaper logo" />
     <h4>{% if page.lang == 'it' %}{{ site.data.languages.it.nav.home }}{% else %}{{ site.data.languages.en.nav.home }}{% endif %}</h4>
   </div>
   <div>
