--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,10 +16,10 @@
       rel="stylesheet"
     />
     <!-- styles -->
-    <link rel="stylesheet" href="{{ '/assets/css/controls.css' | relative_url }}" />
-    <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}" />
+    <link rel="stylesheet" href="{{ '/styles/controls.css' | relative_url }}" />
+    <link rel="stylesheet" href="{{ '/styles/style.css' | relative_url }}" />
     <!-- preload preview -->
-    <link rel="preload" href="{{ '/assets/images/temp_background.webp' | relative_url }}" as="image" />
+    <link rel="preload" href="{{ '/assets/temp_background.webp' | relative_url }}" as="image" />
     <meta charset="utf-8" />
   </head>
   <body>
@@ -30,9 +30,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.151.3/three.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
   <!-- load in this order -->
-  <script src="{{ '/assets/js/controls.js' | relative_url }}"></script>
-  <script src="{{ '/assets/js/script.js' | relative_url }}"></script>
-  <script src="{{ '/assets/js/index.js' | relative_url }}"></script>
+  <script src="{{ '/js/controls.js' | relative_url }}"></script>
+  <script src="{{ '/js/script.js' | relative_url }}"></script>
+  <script src="{{ '/js/index.js' | relative_url }}"></script>
   <script>
     if (window.location.href.indexOf("https://www.rocksdanister.com/lively/") > -1) {
       let script = document.createElement("script");
