--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,10 +16,10 @@
       rel="stylesheet"
     />
     <!-- styles -->
-    <link rel="stylesheet" href="{{ '/styles/controls.css' | relative_url }}" />
-    <link rel="stylesheet" href="{{ '/styles/style.css' | relative_url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/controls.css' | relative_url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}" />
     <!-- preload preview -->
-    <link rel="preload" href="{{ '/assets/temp_background.webp' | relative_url }}" as="image" />
+    <link rel="preload" href="{{ '/assets/images/temp_background.webp' | relative_url }}" as="image" />
     <meta charset="utf-8" />
   </head>
   <body>
