--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,9 +30,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.151.3/three.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
   <!-- load in this order -->
-  <script src="{{ '/js/controls.js' | relative_url }}"></script>
-  <script src="{{ '/js/script.js' | relative_url }}"></script>
-  <script src="{{ '/js/index.js' | relative_url }}"></script>
+  <script src="{{ '/assets/js/controls.js' | relative_url }}"></script>
+  <script src="{{ '/assets/js/script.js' | relative_url }}"></script>
+  <script src="{{ '/assets/js/index.js' | relative_url }}"></script>
   <script>
     if (window.location.href.indexOf("https://www.rocksdanister.com/lively/") > -1) {
       let script = document.createElement("script");
